# task-manager

./: .env.example  .gitignore  README.md  docker-compose.base.yml  docker-compose.gpu.yml  docker-compose.workers.yml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
docker/: Dockerfile.api  Dockerfile.gpu  Dockerfile.worker
docs/: api.md  architecture.md  deployment.md  test_cases.md
examples/: image_super_resolution.py
scripts/deploy/: start_base.sh  start_gpu_workers.sh  start_services.sh  start_workers.sh  stop_services.sh
src/api/: __init__.py  main.py
src/core/: __init__.py  celery_app.py  config.py  task_manager.py
src/models/: __init__.py  task.py
src/monitoring/: __init__.py  dashboard.py  metrics.py  notification.py
src/utils/: __init__.py  storage.py
src/workers/: __init__.py  cpu_worker.py  gpu_worker.py  io_worker.py
tests/: README.md  conftest.py
tests/e2e/: test_workflow.py
tests/integration/: test_api.py  test_task_manager.py
tests/unit/: test_cpu_worker.py  test_gpu_worker.py  test_models.py  test_storage.py
